# conulayer

./: .gitignore  COMMUNITY_NOTES.md  LICENSE  MANUAL.md  README.md  install.sh  project.md
alpine/: setup-file-server.sh  vsock-file-server.openrc  vsock-file-server.py
alpine/mcp-server/: mcp-server.openrc  server.py
docker-editor/: docker-compose.yml
docker-editor/app/: Dockerfile  app.py
docker-editor/app/static/: editor_ui.html
docker-editor/nginx/: nginx.conf
docs/: MANUAL.md  PLAN.md  PLAN_ja.md  architecture-considerations.md  comparison_report.md  original_plan.md
docs/en/: MANUAL.md
unikernel/: Cargo.toml  PLAN_HOST_FUNCTIONS.md  deploy.sh  deploy_wasm.sh  linker.ld  run_test.sh  x86_64-unikernel.json
unikernel/.cargo/: config.toml
unikernel/isodir/boot/: kernel
unikernel/isodir/boot/grub/: grub.cfg
unikernel/src/: blk.rs  boot.s  fw_cfg.rs  idt.rs  main.rs  net.rs  pci.rs  registry.rs  rtc.rs  serial.rs  store.rs  timer.rs  virtio_net.rs  vsock.rs  wasm_rt.rs
unikernel/wasm/: app.wasm  app.wat  bbs.wasm  bbs.wat  bbs_gen.py  bbs_ui.html  editor.wasm  editor.wat  editor_ui.html  eq_gen.py  eq_ui.html
