[package]
name = "unikernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "unikernel"
path = "src/main.rs"

[dependencies]
# Phase 1: ヒープアロケータ（linked-list 方式）
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"] }
# Phase 4: TCP/IP スタック
smoltcp = { version = "0.11", default-features = false, features = [
    "alloc",
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
] }
wasmi = { version = "1.0.9", default-features = false }

[profile.dev]
panic = "abort"
opt-level = 2    # no_std では最低限の最適化が必要

[profile.release]
panic = "abort"
opt-level = 3
